--- a/Sheaft.Web.Manage/Views/PurchaseOrders/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/PurchaseOrders/Edit.cshtml
@@ -30,6 +30,44 @@
     <div class="clearfix"></div>
     <br />
 
+        @if (Model.Status == PurchaseOrderStatus.Waiting)
+        {
+            @using (Html.BeginForm("Refuse", "PurchaseOrders", new { id = Model.Id }, FormMethod.Post))
+            {
+                @Html.AntiForgeryToken()
+                <button type="submit" class="btn btn-outline-danger">Refuse</button>
+            }
+            @using (Html.BeginForm("Accept", "PurchaseOrders", new { id = Model.Id }, FormMethod.Post))
+            {
+                @Html.AntiForgeryToken()
+                <button type="submit" class="btn btn-outline-success">Accept</button>
+            }
+        }
+        @if (Model.Status > PurchaseOrderStatus.Waiting && Model.Status < PurchaseOrderStatus.Completed)
+        {
+            @using (Html.BeginForm("Cancel", "PurchaseOrders", new { id = Model.Id }, FormMethod.Post))
+            {
+                @Html.AntiForgeryToken()
+                <button type="submit" class="btn btn-outline-warning">Cancel</button>
+            }
+        }
+        @if (Model.Status == PurchaseOrderStatus.Processing)
+        {
+            @using (Html.BeginForm("Complete", "PurchaseOrders", new { id = Model.Id }, FormMethod.Post))
+            {
+                @Html.AntiForgeryToken()
+                <button type="submit" class="btn btn-outline-success">Complete</button>
+            }
+        }
+        @if (Model.Status == PurchaseOrderStatus.Completed)
+        {
+            @using (Html.BeginForm("Deliver", "PurchaseOrders", new { id = Model.Id }, FormMethod.Post))
+            {
+                @Html.AntiForgeryToken()
+                <button type="submit" class="btn btn-outline-info">Deliver</button>
+            }
+        }
+    <br />
     @using (Html.BeginForm("Edit", "PurchaseOrders", FormMethod.Post, new { @class = "form" }))
     {
         @Html.AntiForgeryToken()
@@ -189,8 +227,8 @@
             </a>
         }
 
-        <br/>
-        <br/>
+        <br />
+        <br />
         <h4>Products</h4>
 
         <table class="table table-hover">
